--- a/package.json
+++ b/package.json
@@ -3,28 +3,36 @@
   "name": "mongoosastic",
   "description": "A mongoose plugin that indexes models into elastic search",
   "version": "0.2.6",
-  "tags":["mongodb", "elastic search", "mongoose", "full text search"],
+  "tags": [
+    "mongodb",
+    "elastic search",
+    "mongoose",
+    "full text search"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/jamescarr/mongoosastic"
   },
-  "main":"lib/mongoosastic.js",
+  "main": "lib/mongoosastic.js",
   "dependencies": {
-    "elastical":"0.0.12"
+    "async": "^0.9.0",
+    "elastical": "0.0.12",
+    "elasticsearch": "^2.4.0",
+    "request": "^2.40.0"
   },
   "peerDependencies": {
-    "mongoose":"3.8.x"
+    "mongoose": "3.8.x"
   },
   "devDependencies": {
-      "mocha":"*"
-    , "should":"*"
-    , "async":"*"
-    , "mongoose":"3.8.x"
+    "mocha": "*",
+    "should": "*",
+    "async": "*",
+    "mongoose": "3.8.x"
   },
   "engines": {
     "node": ">= 0.8.0"
   },
-  "scripts":{
-    "test":"mocha -R spec -t 20000 -b"
+  "scripts": {
+    "test": "mocha -R spec -t 20000 -b"
   }
 }
